--- a/CursoHTML/index.html
+++ b/CursoHTML/index.html
@@ -19,7 +19,12 @@
     <nav>
         <a href wm-nav="exercicios/teste.html">00 - Teste</a> |
         <a href wm-nav="exercicios/texto1.html">01 - Teste 1</a> |
-        <a href wm-nav="exercicios/texto2.html">02 - Teste 2</a>
+        <a href wm-nav="exercicios/texto2.html">02 - Teste 2</a> |
+        <a href wm-nav="exercicios/listas.html">03 - Listas</a> |
+        <a href wm-nav="exercicios/listaAninhada.html">04 - Listas Aninhadas</a> |
+        <a href wm-nav="exercicios/links.html">05 - Links</a> |
+        <a href wm-nav="exercicios/tabelas.html">06 - Tabelas</a> |
+        <a href wm-nav="exercicios/form/form.html">07 - Formulário</a> |
     </nav>
     <section id="conteudo">
 
