--- a/CursoHTML/exercicios/form/form.html
+++ b/CursoHTML/exercicios/form/form.html
@@ -1,6 +1,10 @@
 <h1>Formulário</h1>
 
-<form action="http://localhost:3003/usuarios" method="POST">
+<!-- <form action="http://localhost:3003/usuarios" method="POST"> -->
+<!-- <form method="GET"> -->
+<form method="POST">
+    <!-- value é atribuido por um script -->
+    <input type="hidden" name="id" value="3">
     <input type="text" name="nome">
     <input type="password" name="senha">
     <textarea name="bio" id="" cols="30" rows="10"></textarea>
@@ -9,27 +13,28 @@
         <input type="radio" name="tipo" value="regular"> Regular
         <input type="radio" name="tipo" value="professor"> Professor
     </div>
-<div>
-    <input type="checkbox" name="ativo"> Ativo
-</div>
+    <div>
+        <input type="checkbox" name="ativo"> Ativo
+    </div>
 
-<select name="estado">
-    <option value="">Selecione</option>
-    <option value="ac">Acre</option>
-    <option value="ba">Bahia</option>
-    <option value="ce">Ceará</option>
-</select>
+    <select name="estado">
+        <option value="">Selecione</option>
+        <option value="ac">Acre</option>
+        <option value="ba">Bahia</option>
+        <option value="ce">Ceará</option>
+    </select>
 
-<select name="interesses" multiple size="5">
-    <option value="js">Jovascript</option>
-    <option value="java">Java</option>
-    <option value="php">PHP</option>
-    <option value="python">Phyton</option>
-    <option value="go">Go</option>
-    <option value="c">C</option>
-</select>
+    <select name="interesses" multiple size="5">
+        <option value="js">Jovascript</option>
+        <option value="java">Java</option>
+        <option value="php">PHP</option>
+        <option value="python">Phyton</option>
+        <option value="go">Go</option>
+        <option value="c">C</option>
+    </select>
 
-    <button>Incluir</button>
+    <button formaction="http://localhost:3003/usuarios">Incluir</button>
+    <button formaction="http://localhost:3003/usuarios/3">Alterar</button>
 </form>
 
 <style>
