Finalização Curso HTML Básico

--- a/CursoHTML/index.html
+++ b/CursoHTML/index.html
@@ -17,7 +17,7 @@
         <h1>Exercícios HTML</h1>
     </header>
     <nav>
-        <a href wm-nav="exercicios/video.html">09 - Vídeo</a> | --------------- |
+        <a href wm-nav="exercicios/tagsNaoVisuais.html">10 - Tags Não Visuais</a> | --------------- |
         <a href wm-nav="exercicios/teste.html">00 - Teste</a> |
         <a href wm-nav="exercicios/texto1.html">01 - Teste 1</a> |
         <a href wm-nav="exercicios/texto2.html">02 - Teste 2</a> |
@@ -28,6 +28,7 @@
         <a href wm-nav="exercicios/form/form.html">07 - Formulário</a> |
         <a href wm-nav="exercicios/imagens.html">08 - Imagens</a> |
         <a href wm-nav="exercicios/imagens_desafio.html">08 - Imagens Desafio</a> |
+        <a href wm-nav="exercicios/video.html">09 - Vídeo</a> |
     </nav>
     <section id="conteudo">
 
