--- a/CursoHTML/exercicios/video.html
+++ b/CursoHTML/exercicios/video.html
@@ -5,7 +5,7 @@
 <br />
 
 <!-- <video id="meuVideo" width="800" controls autoplay controlsList="nodownload"> -->
-<video id="meuVideo" width="800">
+<video id="meuVideo" width="800" controls>
     <source src="http://files.cod3r.com.br/curso-web/video.mp4" type="video/mp4">
     Seu browser não suporta a tag de vídeo.
 </video>
@@ -43,7 +43,15 @@
         video.oncontextmenu = () => false
 
         document.querySelector(`[wm-play=${id}]`).onclick = e => video.play()
+        document.querySelector(`[wm-pause=${id}]`).onclick = e => video.pause()
+
+        setInterval(() => {
+            const percentual = (video.currentTime / video.duration) * 100
+            const valorDiv = document.querySelector(`[wm-progresso=${id}] > div`)
+            valorDiv.style.width = `${percentual}%`
+            valorDiv.innerHTML = `${percentual.toFixed(1)}%`
+        }, 500)
     }
 
-    configurarVideo(meuVideo)
+    configurarVideo('meuVideo')
 </script>
