--- a/CursoCSS/origem.html
+++ b/CursoCSS/origem.html
@@ -4,12 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Origem CSS: Externo, Interno e Inline</title>
+    <!-- estilo interno -->
     <style>
-        /* ... */
+        body {
+            background-color: aquamarine;
+        }
     </style>
+    <!-- estilo externo -->
+    <link rel="stylesheet" href="css/externo.css">
 </head>
 
-<body>
+<!-- estilho inline -->
+<body style="background-color: coral;">
     <h1>E agora?</h1>
 </body>
 
