--- a/CursoCSS/overflow.html
+++ b/CursoCSS/overflow.html
@@ -9,6 +9,10 @@
             height: 100px;
             width: 260px;
             border: solid 3px;
+            overflow: hidden; /* oculta tudo que estiver fora do div */
+            overflow: scroll; /* coloca uma barra de rolagem*/
+            overflow-y: scroll; /* coloca uma barra de rolagem no eixo y*/
+            overflow-x: scroll; /* coloca uma barra de rolagem no eixo x*/
         }
     </style>
 </head>
