--- a/CursoCSS/unidades2.html
+++ b/CursoCSS/unidades2.html
@@ -4,7 +4,31 @@
     <meta charset="UTF-8">
     <title>Unidades #02</title>
     <style>
-        /* ... */
+        .fora {
+            position: relative;
+            background-color: orange;
+            height: 400px;
+            width: 400px;
+            padding: 50px;
+        }
+
+        .dentro {
+            background-color: mediumvioletred;
+            height: 100px;
+            width: 100%;
+
+            /* conteúdo */
+            position: static;
+
+            /* conteúdo */
+            position: relative;
+
+            /* conteúdo + padding */
+            position: absolute;
+
+            /* viewport */
+            position: fixed;
+        }
     </style>
 </head>
 <body>
