--- a/CursoCSS/position.html
+++ b/CursoCSS/position.html
@@ -5,7 +5,67 @@
     <meta charset="UTF-8">
     <title>Position</title>
     <style>
-        /* ... */
+        body {
+            font-family: 'Times New Roman', Times, serif;
+        }
+
+        div {
+            font-size: 60px;
+            padding: 30px;
+            border: solid 5px greenyellow;
+        }
+
+        .static {
+            top: 100px;
+            left: 100px;
+            background-color: darkblue;
+        }
+
+        .fixed {
+            position: fixed;
+            bottom: 30px;
+            right: 0px;
+            background-color: darkred;
+        }
+
+        .relative1 {
+            position: relative;
+            left: 50px;
+            top: 5px;
+            background-color: darkgreen;
+        }
+
+        .absolute1 {
+            position: absolute;
+            left: 350px;
+            top: 120px;
+            background-color: darkmagenta;
+        }
+
+        .relative2 {
+            position: relative;
+            left: 250px;
+            top: 2000px;
+            width: 200px;
+            height: 200px;
+            background-color: darkslategray;
+        }
+
+        .absolute2 {
+            position: absolute;
+            left: 10px;
+            top: 10px;
+            width: 20px;
+            height: 20px;
+            background-color: orange;
+        }
+
+        .sticky {
+            position: -webkit-sticky;
+            position: sticky;
+            background-color: #333;
+            top: 0px;
+        }
     </style>
 </head>
 
