--- a/CursoCSS/texto.html
+++ b/CursoCSS/texto.html
@@ -11,22 +11,95 @@
             margin: 0;
         }
 
+        html {
+            font-size: 28px;
+        }
+
         body {
+            font-family: serif;
             display: flex;
             flex-direction: column;
             align-items: center;
+            /* font-size: 70px; */
+        }
+
+        div {
+            font-size: 50px;
+            margin: 50px;
+        }
+
+        p {
+            font-size: 1em;
+            font-size: 100%;
+            font-size: 16px;
+            font-size: 12pt;
+
+            /* unidades absolutas */
+            font-size: 100px;
+            font-size: 72pt;
+            font-size: 1in;
+
+            /* unidades relativas */
+            font-size: 2.2em;
+            font-size: 2.2rem;
+            font-size: 50vh;
+            font-size: 10vw;
+
+            font-family: monospace;
+            font-family: Georgia, 'Times New Roman', Times, serif;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-family: 'Indie Flower', cursive;
+
+            font-weight: 100;
+            font-style: italic;
+            text-transform: uppercase;
+            /* text-decoration: overline underline line-through; */
+            word-spacing: 10px;
+            letter-spacing: 20px;
+            line-height: 2.5em;
+            text-align: center;
+
+
+        }
+
+        .botao {
+            font-size: 28px;
+            text-decoration: none;
+            padding: 10px 30px;
+            border-radius: 25px;
+        }
+
+        .botao:active {
+            position: relative;
+            top: 50px;
+            left: 50px;
+        }
+
+        .destaque {
+            color: #fff;
+            background-color: tomato;
+            box-shadow: 20px 20px 5px #000;
+        }
+
+        .destaque:active {
+            box-shadow: 2px 2px 3px #000;
         }
     </style>
 </head>
 
 <body>
+
+
+
+    <div>
+        <a href="#" class="botao destaque">Google</a>
+    </div>
     <div>
         <p>
             Que texto
             <br>legal!!!
         </p>
     </div>
-    <a href="http://google.com" class="botao destaque">Google</a>
 </body>
 
 </html>
