--- a/CursoCSS/unidades1.html
+++ b/CursoCSS/unidades1.html
@@ -1,11 +1,37 @@
-<!DOCTYPE html>
+<!-- v<!DOCTYPE html> -->
 <html>
 
 <head>
     <meta charset="UTF-8">
     <title>Unidades #01</title>
     <style>
-        /* ... */
+        body {
+            font-family: 'Times New Roman', Times, serif;
+        }
+
+        .unidades-absolutas {
+            position: absolute;
+            font-size: 40px;
+            padding: 20px;
+            border: solid 5px yellow;
+            margin: 30px;
+            width: 4cm;
+            height: 20mm;
+            top: 150px;
+            left: 200px;
+        }
+
+        .unidades-relativas {
+            position: absolute;
+            font-size: 4em;
+            padding: 5%;
+            border: solid 1vw greenyellow;
+            margin: .8%;
+            width: 20vw;
+            height: 15vh;
+            bottom: 5%;
+            right: 5%;
+        }
     </style>
 </head>
 
