--- a/ExerciciosHTMLeCSS/index.html
+++ b/ExerciciosHTMLeCSS/index.html
@@ -50,7 +50,6 @@
             background-color: #EDF2F4;
             position: sticky;
             top: 0;
-            /* border: solid 0.05px magenta; */
             /* position: ; */
             z-index: 100;
         }
@@ -90,6 +89,7 @@
             /* overflow: hidden; */
             border-bottom: solid 2px #8D99AE;
             /* box-shadow: 0px 3px 5px #8D99AE */
+            overflow: hidden;
         }
 
         .menu ul {
@@ -97,7 +97,6 @@
             padding: 0;
             box-sizing: border-box;
             /* height: 100%; */
-            overflow: hidden;
             border: none
         }
 
@@ -134,21 +133,48 @@
         .welcome {
             margin: 0;
             height: 500px;
-            background-image:url("img/welcome.jpg");
+            background-image: url("img/welcome.jpg");
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
             position: relative;
+
+            /* border: solid 0.05px magenta; */
         }
 
         .welcome .text {
+            box-sizing: border-box;
+            background-color: rgba(43, 45, 66, 0.8);
+            padding: 30px 30px;
             float: right;
             position: absolute;
-            bottom: 50px;
-            right: 50px;
+            bottom: 40px;
+            right: 60px;
+            font-family: 'Merriweather', serif;
+            color: #EDF2F4;
+            /* border-bottom: solid 2px #D90429; */
+            /* border-right: solid 2px #D90429; */
+            box-shadow: 2px 2px #2B2D42
         }
 
+        .welcome .welcome-title {
+            font-size: 3em;
+            display: block;
+            margin: 0;
+            margin-bottom: 10px;
+            font-weight: bold;
+            border: none;
+            text-shadow: 2px 2px #2B2D42;
+        }
 
+        .welcome .company-name {
+            font-size: 2em;
+            display: block;
+            margin: 0;
+            font-weight: normal;
+            border: none;
+            text-shadow: 2px 2px #2B2D42;
+        }
     </style>
 </head>
 
@@ -175,7 +201,7 @@
     <section class="welcome">
         <div class="text">
             <p class="welcome-title">Welcome to</p>
-            <p class="company-name">Company Name</p>
+            <h1 class="company-name">Company Name</h1>
         </div>
         <img class="background" src="" alt="">
     </section>
