Finalização Curso CSS / Início Curso JavaScript

--- a/CursoCSS/cssgrid2.html
+++ b/CursoCSS/cssgrid2.html
@@ -10,6 +10,8 @@
             margin: 20px;
             height: calc(100% - 40px);
             background-color: lightgray;
+            color: black;
+            font-family: 'Times New Roman', Times, serif;
         }
         
         div {
@@ -19,6 +21,15 @@
             font-size: 30px;
             border: solid 5px dodgerblue;
             background: #fff;
+        }
+
+        body {
+            display: grid;
+            grid-template-columns:
+                [inicio] 1fr
+                [metade-1 meio-1] 1fr
+                [metade-2 meio-2] 1fr [fim];
+                grid-template-rows: repeat(3, 1fr); 
         }
     </style>
 </head>
