--- a/CursoCSS/flexboxMenu.html
+++ b/CursoCSS/flexboxMenu.html
@@ -54,6 +54,24 @@
         /* ==================== */
         /* Solução com Flex Box */
         /* ==================== */
+        .cabecalho {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .menu {
+            flex-grow: 10;
+        }
+
+        .menu ul {
+            display: flex;
+            /* justify-content: center; */
+        }
+
+        .menu li {
+            margin: 0 10px;
+        }
     </style>
 </head>
 
@@ -61,7 +79,7 @@
     <header class="cabecalho">
         <div class="logo">
             <a href="#inicio">
-                <img src="http://files.cod3r.com.br/curso-web/logo.png" alt="Logo" />
+                <img src="img/logo.png" alt="Logo" />
             </a>
         </div>
         <nav class="menu">
