--- a/CursoJavaScript/exerciciosURI/index.html
+++ b/CursoJavaScript/exerciciosURI/index.html
@@ -1,5 +1,5 @@
 <html>
     <head>
-        <script src="resolvidos/1006.js"></script>
+        <script src="calc.js"></script>
     </head>
 </html>
