--- a/CursoJavaScript/exercicios-uri/index.html
+++ b/CursoJavaScript/exercicios-uri/index.html
@@ -1,5 +1,7 @@
 <html>
-    <head>
-        <script src="uri.js"></script>
-    </head>
+
+<head>
+    <script src="trybe1d3.js"></script>
+</head>
+
 </html>
